@startuml ERD_HethongThuGomRacTaiChe
!theme plain
skinparam linetype ortho
skinparam backgroundColor #FFFEF7
skinparam defaultFontSize 10

skinparam table {
    BackgroundColor #F5F0E6
    BorderColor #C4A574
}

entity "User" as user {
  * id : TEXT <<PK>>
  --
  email : TEXT
  password : TEXT
  fullName : TEXT
  phone : TEXT
  address : TEXT
  avatar : TEXT
  role : TEXT
  isLocked : BOOLEAN
  points : INTEGER
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "PasswordReset" as password_reset {
  * id : TEXT <<PK>>
  --
  userId : TEXT <<FK>>
  token : TEXT
  expiresAt : TIMESTAMP
  createdAt : TIMESTAMP
}

entity "WasteType" as waste_type {
  * id : TEXT <<PK>>
  --
  name : TEXT
  description : TEXT
  pointsPerKg : DOUBLE
  isActive : BOOLEAN
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "CollectionRequest" as collection_request {
  * id : TEXT <<PK>>
  --
  customerId : TEXT <<FK>>
  wasteTypeId : TEXT <<FK>>
  staffId : TEXT <<FK>>
  quantity : DOUBLE
  estimatedQuantity : DOUBLE
  address : TEXT
  note : TEXT
  imageUrl : TEXT
  status : TEXT
  verifiedWeight : DOUBLE
  verifiedTypeId : TEXT
  pointsEarned : INTEGER
  completedAt : TIMESTAMP
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "StatusHistory" as status_history {
  * id : TEXT <<PK>>
  --
  requestId : TEXT <<FK>>
  status : TEXT
  note : TEXT
  createdAt : TIMESTAMP
}

entity "Reward" as reward {
  * id : TEXT <<PK>>
  --
  name : TEXT
  description : TEXT
  pointsCost : INTEGER
  quantity : INTEGER
  imageUrl : TEXT
  isActive : BOOLEAN
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "RewardRedemption" as reward_redemption {
  * id : TEXT <<PK>>
  --
  userId : TEXT <<FK>>
  rewardId : TEXT <<FK>>
  pointsSpent : INTEGER
  status : TEXT
  createdAt : TIMESTAMP
}

entity "PointTransaction" as point_transaction {
  * id : TEXT <<PK>>
  --
  userId : TEXT <<FK>>
  amount : INTEGER
  type : TEXT
  description : TEXT
  referenceId : TEXT
  createdAt : TIMESTAMP
}

user ||--o{ password_reset : "1"
user ||--o{ collection_request : "customer"
user ||--o{ collection_request : "staff"
user ||--o{ reward_redemption : "1"
user ||--o{ point_transaction : "1"

waste_type ||--o{ collection_request : "1"

collection_request ||--o{ status_history : "1"

reward ||--o{ reward_redemption : "1"

@enduml
